data/derived/fa15/progs/unify/prog2763.ml.out
Characters 196-197:
  if value > 9 then [(1,value-10)]@a 
                                   ^
Error: This expression has type int * 'a
       but an expression was expected of type (int * int) list
